test/classes/casts/argumentCoerce_Ref/error/from-shared-Parent-nilable-to-shared-Child.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from shared Parent? to shared Child
proc bar(ref x: shared Child) {}
proc foo() {
  var a = new shared Parent?();
  bar(a);
}
proc main() {
  foo();
}
